# spotify-manager

./: Cargo.toml  flake.nix
src/: cache.rs  cli.rs  error.rs  generate.rs  ipc.rs  main.rs  playlist.rs  spotify.rs  switch_track.rs  track_info.rs
