[package]
name = "spotify-manager"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.35", features = ["derive"] }
spotify-rs = "0.3.14"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
