[package]
name = "spotify-manager"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
enum-iterator = "2.1.0"
rand = "0.9.1"
ron = "0.10.1"
serde = "1.0.219"
spotify-rs = "0.3.14"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
